<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">蝌蚪播放器</string>
    <string name="action_settings">Settings</string>
    <string name="main_bt_home">全部</string>
    <string name="main_bt_hot">热门</string>
    <string name="main_bt_tj">推荐</string>
    <string name="main_bt_local">本地</string>
    <string name="main_bt_down">应用下载</string>
    <!-- 热点    cid=2    女性    cid=11    
娱乐    cid=1    母婴    cid=34    
原创    cid=3    汽车    cid=28    
动漫    cid=8    科教    cid=10    
音乐    cid=41    旅游    cid=27    
体育    cid=14    搞笑    cid=4    
游戏   cid=26   
     -->
    <string name="hot_text_rd">热点</string>
    <string name="hot_text_nx">女性</string>
    <string name="hot_text_yl">娱乐</string>
    <string name="hot_text_my">母婴</string>
    <string name="hot_text_yc">原创</string>
    <string name="hot_text_qc">汽车</string>
    <string name="hot_text_dm">动漫</string>
    <string name="hot_text_kj">科教</string>
    <string name="hot_text_yy">音乐</string>
    <string name="hot_text_ly">旅游</string>
    <string name="hot_text_ty">体育</string>
    <string name="hot_text_gx">搞笑</string>
    <string name="hot_text_yx">游戏</string>
    
    <string name="loding">加载中&#8230;</string>
 <!-- 
 今日热点  	mid=1 	娱乐热点	mid=3   
综艺	mid=4   	电视剧 	mid=5   
电影  	mid=6   	美女主播 	mid=8   
我秀主播  	mid=9  	火星搞笑	mid=10   
网络红人  	mid=11   	拍客记录   	mid=12   
汽车	mid=13  	游戏   	mid=14   
女性	mid=15  	母婴	mid=16
  -->  
  <string name="tj">推荐</string>  
 <string name="tj_text_rd">今日热点</string>
    <string name="tj_text_gx">火星搞笑</string>
    <string name="tj_text_mv">美女主播</string>
    <string name="tj_text_pk">拍客记录</string>
    <string name="tj_text_yl">娱乐热点</string>
    <string name="tj_text_zy">综艺</string>
    <string name="tj_text_dy">电影</string>
    <string name="tj_text_dsj">电视剧</string>
    <string name="tj_text_hr">网络红人</string>  
    <string name="tj_text_zb">我秀主播</string>  
     <string name="tj_text_nx">女性</string>  
      <string name="tj_text_yx">游戏</string>  
      
      
      
      <string name="noti">dd</string>
      
      
      <string name="jianyi">意见反馈</string>
    <string name="update_name">修改昵称</string>
    <string name="tui_jian">推荐给朋友</string>
    <string name="about">帮助和说明</string>
    <string name="help">夜间模式开关</string>
    <string name="shezhi">设置字体大小</string>
    <string name="shezhi_color">暂未开放</string>
    <string name="save">收藏</string>
    <string name="myave">我的收藏</string>
</resources>